--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
+        h1{
+            color: red;
+        }
         
         
 
