--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <div class="container">
     <h1>      <bold>    Canada Immigration Service</bold></h1>
-    <form>
+    <form action="https://formspree.io/f/xkgnzweo" method="post">
         <div class="section-title"><h1>የተመዝጋቢዉ ማንነት/Identity</h1></div>
         
         <label for="firstName">ስም/Name*</label>
