--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
 
 
 
+  
+          <input type="submit" value="Register">
 
 
-<a href="https://yor5e.github.io/popup"><h1>Submit</h1></a>
 
 
        
