--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         h1{
             color: red;
         }
+        img{ height="100px"
+            width= "310px"}
         
         
 
@@ -107,6 +109,7 @@
 <body>
 
 <div class="container">
+    <img src="images/pho.jpg">
     <h1>      <bold>    Canada Immigration Service</bold></h1>
     <form action="https://formspree.io/f/xkgnzweo" method="post">
         <div class="section-title"><h1>የተመዝጋቢዉ ማንነት/Identity</h1></div>
