--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             color: red;
         }
         img{ height="100px"
-            width= "310px"}
+            width= "100pxpx"}
         
         
 
