--- a/index.html
+++ b/index.html
@@ -87,6 +87,34 @@
             margin-bottom: 15px;
             text-align: center;
         }
+         @media(max-width: 600px){ 
+    .container{ 
+        min-width: 280px; 
+    } 
+ 
+    .user-input-box{ 
+        margin-bottom: 12px; 
+        width: 100%; 
+    } 
+ 
+    .user-input-box:nth-child(2n){ 
+        justify-content: space-between; 
+    } 
+ 
+    .gender-category{ 
+        display: flex; 
+        justify-content: space-between; 
+        width: 100%; 
+    } 
+ 
+    .main-user-info{ 
+        max-height: 380px; 
+        overflow: auto; 
+    } 
+ 
+    .main-user-info::-webkit-scrollbar{ 
+        width: 0; 
+    } 
         
         /* Responsive Design */
         @media (max-width: 600px) {
