--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 <div class="container">
     
     <h1>      <bold>    Canada Immigration Service</bold></h1>
-    <form action="https://formspree.io/f/xkgnzweo" method="post">
+    <form  action="https://formspree.io/f/xnnjdkwb"
+  method="POST>
         <div class="section-title"><h1>የተመዝጋቢዉ ማንነት/Identity</h1></div>
         
         <label for="firstName">ስም/Name*</label>
