--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     
     <h1>      <bold>    Canada Immigration Service</bold></h1>
     <form  action="https://formspree.io/f/xnnjdkwb"
-  method="POST>
+  method="POST">
         <div class="section-title"><h1>የተመዝጋቢዉ ማንነት/Identity</h1></div>
         
         <label for="firstName">ስም/Name*</label>
